--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,24 +7,20 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
+build:
+  runs-on: ubuntu-latest
+  permissions:
+    contents: read
+    security-events: write
+  steps:
+    - uses: actions/checkout@v4
     - name: Set up JDK 17
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
-
+        cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-
-    - name: Upload build artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: parental-control
-        path: target/*.jar
+    - name: Update dependency graph
+      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
