--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,32 +1,30 @@
 name: Build Java Maven Project
 
 on:
-push:
-branches: \[ "main" ]
-pull\_request:
-branches: \[ "main" ]
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
-build:
-runs-on: ubuntu-latest
+  build:
+    runs-on: ubuntu-latest
 
-```
-steps:
-  - name: Checkout code
-    uses: actions/checkout@v3
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-  - name: Set up JDK 17
-    uses: actions/setup-java@v3
-    with:
-      java-version: '17'
-      distribution: 'temurin'
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
 
-  - name: Build with Maven
-    run: mvn clean package
+      - name: Build with Maven
+        run: mvn clean package
 
-  - name: Upload JAR artifact
-    uses: actions/upload-artifact@v4
-    with:
-      name: parental-control-jar
-      path: target/*.jar
-```
+      - name: Upload JAR artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: parental-control-jar
+          path: target/*.jar
